fixed whitespace

--- a/style.css
+++ b/style.css
@@ -2,11 +2,15 @@
 
 *{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: 'Lato', sans-serif;
-  color: gray;}
+  color: gray;
+
+}
 
 main {
   display: flex;
@@ -68,24 +72,25 @@ nav li {
 }
 
 #welcome-txt h1 {
-  margin: 0 auto;
+  margin: 2rem auto;
   font-size: 4rem;
   color: black;
  }
 
 #welcome-txt p {
-  margin: 1rem auto;
-  font-size: 1rem;
-  font-style: italic;
+  margin: 2rem auto;
+  font-size: 1.5rem;
   color: gray;
  }
 
 #projects {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   grid-template-areas: "item1 item2 item3";
-   grid-gap: 20px 20px;
+  grid-gap: 20px 20px;
 }
 
 figcaption {
@@ -94,9 +99,10 @@ figcaption {
   font-size: 1rem;
   position: relative;
   bottom: 40px;
+  color: transparent;
+  padding: .5rem 0;
   background-color: rgba(1, 1, 1, .2);
   color: white;
-  padding: .5rem 0;
   }
 
 #item-1 {
@@ -150,17 +156,16 @@ figcaption {
  }
 
 #contact-text h1 {
-  margin: 2rem auto .1rem auto;
-  font-size: 5rem;
+  margin: 2rem auto;
+  font-size: 4rem;
   font-weight: bold;
   color: black;
  }
 
 
 #contact-text p {
-  margin: .5rem auto .1rem auto;
+  margin: 2rem auto;
   font-size: 1.5rem;
-font-style: italic;
 }
   
   
@@ -191,6 +196,19 @@ footer {
   #item-1 {
     width: 100%;      
   }
-  
+
+  #contact ul {
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 2rem auto;
+    font-size: 1rem;
+  }
+
+  #contact-text h1 {
+    font-size: 2.5rem;
+   }
+
+   #contact-text p {
+    font-size: 1rem;
+  }
 }
- 
